--- a/peerassessment/requirements.txt
+++ b/peerassessment/requirements.txt
@@ -1,3 +1,9 @@
 APScheduler==2.1.2
 Django==1.6.5
 requests==2.3.0
+dj-database-url==0.2.2
+dj-static==0.0.5
+gunicorn==18.0
+psycopg2==2.5.1
+static==0.4
+wsgiref==0.1.2
